fix modal on iphone

--- a/css/style.scss
+++ b/css/style.scss
@@ -175,9 +175,8 @@ textarea {
   margin-right:auto;
   bottom:0;
   left: 50% ;
-
-  width: 60px;
-  height: 60px ;
+  width: 55px;
+  height: 55px ;
   border: 2px solid #039be5;
   -webkit-border-radius:50%;
   -moz-border-radius:50%;
@@ -347,6 +346,6 @@ textarea {
 @media only screen and (max-width: 500px) {
 
     .hero {
-      padding: 80px 0px;
+      padding: 60px 0px;
     }
 }
